Update link styling to fix links and text overflow on smaller screens Relates #10

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -15,7 +15,18 @@ body {
 
 a {
   color: #1c1c1c;
-  text-decoration-color: #bfe8e3;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+a:hover,
+a:focus {
+  border-bottom: 1px solid;
+  background: #bfe8e3;
 }
 
 #container {
@@ -56,10 +67,7 @@ nav #details {
 nav #details a {
   color: rgba(28, 28, 28, 0.7);
   text-decoration: none;
-}
-
-nav #details a:hover {
-  text-decoration: underline;
+  font-weight: normal;
 }
 
 nav #details i {
@@ -68,10 +76,12 @@ nav #details i {
 
 nav ul {
   margin: 0;
+  max-width: 100%;
   list-style-type: none;
   padding: 0rem 0rem 0.5rem 0rem;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 nav li {
@@ -96,6 +106,17 @@ nav li.active {
 nav li a {
   text-decoration: none;
   padding: 1rem 1rem 0.5rem 1rem;
+}
+
+nav li a:hover {
+  border-bottom: 1px solid;
+  background: inherit;
+}
+
+nav li a:hover,
+nav li a:focus {
+  border: 0;
+  background: inherit;
 }
 
 figure,
@@ -194,7 +215,7 @@ footer a {
 
 hr {
   width: 100%;
-  margin: 0.5rem;
+  margin: 1rem 0.5rem 0.5rem 0.5rem;
   border: 0;
   height: 1px;
   background-image: linear-gradient(
@@ -208,7 +229,7 @@ hr {
 .one-column {
   display: flex;
   flex-direction: column;
-  width: 24rem;
+  max-width: 24rem;
   justify-content: center;
   align-items: center;
 }
@@ -218,6 +239,8 @@ hr {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
 
 article {
@@ -366,7 +389,7 @@ section {
     border: 0px;
   }
   hr {
-    margin: 0.25rem;
+    margin: 0.5rem 0.25rem 0.25rem 0.25rem;
   }
   nav #details {
     display: flex;
